feat: #3000 静态资源优化，但线上部署较为繁琐，后续看博客说明

--- a/app/view/home/article.html
+++ b/app/view/home/article.html
@@ -30,8 +30,8 @@
         }
       }
     </script>
-    <link rel="stylesheet" href="/public/home/css/index.css" />
-    <link rel="shortcut icon" href="/public/home/images/favicon.ico" />
+    <link rel="stylesheet" href="/public/home/dev/css/index.css" />
+    <link rel="shortcut icon" href="/public/home/dev/images/favicon.ico" />
     <link
       rel="stylesheet"
       href="//at.alicdn.com/t/font_1611091_k3rjchrrrgp.css"
@@ -99,19 +99,19 @@
                     name="face"
                     onchange="document.images['face'].src=options[selectedIndex].value;"
                   >
-                    <option value="/public/home/images/p1.png">头像1</option>
-                    <option value="/public/home/images/p2.png">头像2</option>
-                    <option value="/public/home/images/p3.png">头像3</option>
-                    <option value="/public/home/images/p4.png">头像4</option>
-                    <option value="/public/home/images/p5.png">头像5</option>
-                    <option value="/public/home/images/p6.png">头像6</option>
-                    <option value="/public/home/images/p7.png">头像7</option>
-                    <option value="/public/home/images/p8.png">头像8</option>
+                    <option value="/public/home/dev/images/p1.png">头像1</option>
+                    <option value="/public/home/dev/images/p2.png">头像2</option>
+                    <option value="/public/home/dev/images/p3.png">头像3</option>
+                    <option value="/public/home/dev/images/p4.png">头像4</option>
+                    <option value="/public/home/dev/images/p5.png">头像5</option>
+                    <option value="/public/home/dev/images/p6.png">头像6</option>
+                    <option value="/public/home/dev/images/p7.png">头像7</option>
+                    <option value="/public/home/dev/images/p8.png">头像8</option>
                   </select>
                 </label>
                 <span
                   ><img
-                    src="/public/home/images/p1.png"
+                    src="/public/home/dev/images/p1.png"
                     id="face"
                     class="face"
                     alt="face"
@@ -173,35 +173,35 @@
                               name="face"
                               onchange="document.images['<%= comment.id %>replyface'].src=options[selectedIndex].value;"
                             >
-                              <option value="/public/home/images/p1.png"
+                              <option value="/public/home/dev/images/p1.png"
                                 >头像1</option
                               >
-                              <option value="/public/home/images/p2.png"
+                              <option value="/public/home/dev/images/p2.png"
                                 >头像2</option
                               >
-                              <option value="/public/home/images/p3.png"
+                              <option value="/public/home/dev/images/p3.png"
                                 >头像3</option
                               >
-                              <option value="/public/home/images/p4.png"
+                              <option value="/public/home/dev/images/p4.png"
                                 >头像4</option
                               >
-                              <option value="/public/home/images/p5.png"
+                              <option value="/public/home/dev/images/p5.png"
                                 >头像5</option
                               >
-                              <option value="/public/home/images/p6.png"
+                              <option value="/public/home/dev/images/p6.png"
                                 >头像6</option
                               >
-                              <option value="/public/home/images/p7.png"
+                              <option value="/public/home/dev/images/p7.png"
                                 >头像7</option
                               >
-                              <option value="/public/home/images/p8.png"
+                              <option value="/public/home/dev/images/p8.png"
                                 >头像8</option
                               >
                             </select>
                           </label>
                           <span
                             ><img
-                              src="/public/home/images/p1.png"
+                              src="/public/home/dev/images/p1.png"
                               class="face"
                               alt="face"
                               width="50"
@@ -272,35 +272,35 @@
                                   id="<%= reply.id %>replyface"
                                   onchange="document.images['<%= reply.id %>replyface'].src=options[selectedIndex].value;"
                                 >
-                                  <option value="/public/home/images/p1.png"
+                                  <option value="/public/home/dev/images/p1.png"
                                     >头像1</option
                                   >
-                                  <option value="/public/home/images/p2.png"
+                                  <option value="/public/home/dev/images/p2.png"
                                     >头像2</option
                                   >
-                                  <option value="/public/home/images/p3.png"
+                                  <option value="/public/home/dev/images/p3.png"
                                     >头像3</option
                                   >
-                                  <option value="/public/home/images/p4.png"
+                                  <option value="/public/home/dev/images/p4.png"
                                     >头像4</option
                                   >
-                                  <option value="/public/home/images/p5.png"
+                                  <option value="/public/home/dev/images/p5.png"
                                     >头像5</option
                                   >
-                                  <option value="/public/home/images/p6.png"
+                                  <option value="/public/home/dev/images/p6.png"
                                     >头像6</option
                                   >
-                                  <option value="/public/home/images/p7.png"
+                                  <option value="/public/home/dev/images/p7.png"
                                     >头像7</option
                                   >
-                                  <option value="/public/home/images/p8.png"
+                                  <option value="/public/home/dev/images/p8.png"
                                     >头像8</option
                                   >
                                 </select>
                               </label>
                               <span
                                 ><img
-                                  src="/public/home/images/p1.png"
+                                  src="/public/home/dev/images/p1.png"
                                   class="face"
                                   id="<%= reply.id %>replyface"
                                   alt="face"
@@ -349,7 +349,7 @@
       </div>
     </div>
     <script src="https://cdn.bootcss.com/jquery/3.4.1/jquery.min.js"></script>
-    <script src="/public/home/js/style.js"></script>
+    <script src="/public/home/dev/js/style.js"></script>
     <script src="/public/ueditor/third-party/highlight/highlight.pack.js"></script>
     <script>
       // 代码高亮
@@ -365,6 +365,6 @@
       defer
       src="https://cdn.bootcdn.net/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.min.js"
     ></script>
-    <script src="/public/home/js/form.js"></script>
+    <script src="/public/home/dev/js/form.js"></script>
   </body>
 </html>
