--- a/app/view/home/public/footer.html
+++ b/app/view/home/public/footer.html
@@ -2,7 +2,7 @@
   <!-- 回到顶部图标 -->
   <div class="top">
     <img
-      src="/public/home/images/top.png"
+      src="/public/home/dev/images/top.png"
       alt="回到顶部图片"
       title="回到顶部"
     />
