--- a/app/view/home/list.html
+++ b/app/view/home/list.html
@@ -153,7 +153,7 @@
     </div>
     <%- include('./public/color.html') %>
     <script src="https://cdn.bootcss.com/jquery/3.4.1/jquery.min.js"></script>
-    <script src="/public/home/js/style.js"></script>
+    <script src="/public/home/dev/js/style.js"></script>
     <script
       defer
       src="https://cdn.bootcdn.net/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.min.js"
