fix: @1200 后台校验博客封面

--- a/app/view/admin/blogs/add.html
+++ b/app/view/admin/blogs/add.html
@@ -11,6 +11,8 @@
     <title></title>
     <link rel="stylesheet" href="/public/admin/css/pintuer.css" />
     <link rel="stylesheet" href="/public/admin/css/admin.css" />
+    <link rel="stylesheet" href="/public/admin/js/jquery.js" />
+    <link rel="stylesheet" href="/public/admin/js/pintuer.js" />
     <script
       type="text/javascript"
       charset="utf-8"
