--- a/app/view/home/public/header.html
+++ b/app/view/home/public/header.html
@@ -54,13 +54,10 @@
         <hr />
       </div>
       <ul class="navbar-nav flex-column text-left">
-        <li class="nav-item active">
+        <li class="nav-item">
           <a class="nav-link" href="/"
-            ><i class="iconfont icon-shouye"></i>&nbsp;博客首页<span
-              class="sr-only"
-              >(current)</span
-            ></a
-          >
+            ><i class="iconfont icon-shouye"></i>&nbsp;博客首页
+          </a>
         </li>
         <li class="nav-item">
           <a href="/list" class="nav-link"
