--- a/app/view/404.html
+++ b/app/view/404.html
@@ -67,7 +67,7 @@
 
   <script>
     var countTime = 5;
-    var time = document.querySelector("#time");
+    var time = document.getElementById("time");
     function fn() {
       if (countTime === 0) {
         location.href = "/";
