--- a/app/view/home/article.html
+++ b/app/view/home/article.html
@@ -348,8 +348,8 @@
         评论成功！
       </div>
     </div>
-    <script src="https://cdn.bootcss.com/jquery/3.4.1/jquery.min.js"></script>
-    <script src="/public/home/dev/js/style.js"></script>
+    <%- include('./public/script.html') %>
+    
     <script src="/public/ueditor/third-party/highlight/highlight.pack.js"></script>
     <script>
       // 代码高亮
@@ -361,10 +361,5 @@
         onepre.innerHTML = '<code id="mycode">' + mycode + "</code>";
       }
     </script>
-    <script
-      defer
-      src="https://cdn.bootcdn.net/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.min.js"
-    ></script>
-    <script src="/public/home/dev/js/form.js"></script>
   </body>
 </html>
