--- a/app/view/home/index.html
+++ b/app/view/home/index.html
@@ -90,11 +90,6 @@
       <%- include('./public/footer.html') %>
     </div>
     <%- include('./public/color.html') %>
-    <script src="https://cdn.bootcss.com/jquery/3.4.1/jquery.min.js"></script>
-    <script src="/public/home/dev/js/style.js"></script>
-    <script
-      defer
-      src="https://cdn.bootcdn.net/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.min.js"
-    ></script>
+    <%- include('./public/script.html') %>
   </body>
 </html>
