--- a/app/view/home/article.html
+++ b/app/view/home/article.html
@@ -30,7 +30,7 @@
         }
       }
     </script>
-    <link rel="stylesheet" href="/public/home/dev/css/index.css" />
+    <link rel="stylesheet" href="/public/home/css/index-9c732666d1.min.css" />
     <link rel="shortcut icon" href="/public/home/dev/images/favicon.ico" />
     <link
       rel="stylesheet"
