fix: %%% 本地、线上开发分支更新

--- a/app/view/home/public/head.html
+++ b/app/view/home/public/head.html
@@ -6,8 +6,8 @@
 <meta name="keywords" content="<%= webConfig.keywords %>" />
 <meta name="baidu-site-verification" content="H91h9G7RRd" />
 <meta name="author" content="shixtao" />
-<link id="theme-style" rel="stylesheet" href="/public/home/dev/css/index.css" />
-<link rel="shortcut icon" href="/public/home/dev/images/favicon.ico" />
+<link id="theme-style" rel="stylesheet" href="/public/home/css/index.css" />
+<link rel="shortcut icon" href="/public/home/images/favicon.ico" />
 <link rel="stylesheet" href="//at.alicdn.com/t/font_1611091_bx54xqd4lzu.css" />
 <script>
   //颜色保存于localstorage中
