--- a/app/view/home/article.html
+++ b/app/view/home/article.html
@@ -30,8 +30,8 @@
         }
       }
     </script>
-    <link rel="stylesheet" href="/public/home/dev/css/index.css" />
-    <link rel="shortcut icon" href="/public/home/dev/images/favicon.ico" />
+    <link rel="stylesheet" href="/public/home/css/index.css" />
+    <link rel="shortcut icon" href="/public/home/images/favicon.ico" />
     <link
       rel="stylesheet"
       href="//at.alicdn.com/t/font_1611091_k3rjchrrrgp.css"
@@ -99,19 +99,19 @@
                     name="face"
                     onchange="document.images['face'].src=options[selectedIndex].value;"
                   >
-                    <option value="/public/home/dev/images/p1.png">头像1</option>
-                    <option value="/public/home/dev/images/p2.png">头像2</option>
-                    <option value="/public/home/dev/images/p3.png">头像3</option>
-                    <option value="/public/home/dev/images/p4.png">头像4</option>
-                    <option value="/public/home/dev/images/p5.png">头像5</option>
-                    <option value="/public/home/dev/images/p6.png">头像6</option>
-                    <option value="/public/home/dev/images/p7.png">头像7</option>
-                    <option value="/public/home/dev/images/p8.png">头像8</option>
+                    <option value="/public/home/images/p1.png">头像1</option>
+                    <option value="/public/home/images/p2.png">头像2</option>
+                    <option value="/public/home/images/p3.png">头像3</option>
+                    <option value="/public/home/images/p4.png">头像4</option>
+                    <option value="/public/home/images/p5.png">头像5</option>
+                    <option value="/public/home/images/p6.png">头像6</option>
+                    <option value="/public/home/images/p7.png">头像7</option>
+                    <option value="/public/home/images/p8.png">头像8</option>
                   </select>
                 </label>
                 <span
                   ><img
-                    src="/public/home/dev/images/p1.png"
+                    src="/public/home/images/p1.png"
                     id="face"
                     class="face"
                     alt="face"
@@ -173,35 +173,19 @@
                               name="face"
                               onchange="document.images['<%= comment.id %>replyface'].src=options[selectedIndex].value;"
                             >
-                              <option value="/public/home/dev/images/p1.png"
-                                >头像1</option
-                              >
-                              <option value="/public/home/dev/images/p2.png"
-                                >头像2</option
-                              >
-                              <option value="/public/home/dev/images/p3.png"
-                                >头像3</option
-                              >
-                              <option value="/public/home/dev/images/p4.png"
-                                >头像4</option
-                              >
-                              <option value="/public/home/dev/images/p5.png"
-                                >头像5</option
-                              >
-                              <option value="/public/home/dev/images/p6.png"
-                                >头像6</option
-                              >
-                              <option value="/public/home/dev/images/p7.png"
-                                >头像7</option
-                              >
-                              <option value="/public/home/dev/images/p8.png"
-                                >头像8</option
-                              >
+                            <option value="/public/home/images/p1.png">头像1</option>
+                            <option value="/public/home/images/p2.png">头像2</option>
+                            <option value="/public/home/images/p3.png">头像3</option>
+                            <option value="/public/home/images/p4.png">头像4</option>
+                            <option value="/public/home/images/p5.png">头像5</option>
+                            <option value="/public/home/images/p6.png">头像6</option>
+                            <option value="/public/home/images/p7.png">头像7</option>
+                            <option value="/public/home/images/p8.png">头像8</option>
                             </select>
                           </label>
                           <span
                             ><img
-                              src="/public/home/dev/images/p1.png"
+                              src="/public/home/images/p1.png"
                               class="face"
                               alt="face"
                               width="50"
@@ -272,35 +256,19 @@
                                   id="<%= reply.id %>replyface"
                                   onchange="document.images['<%= reply.id %>replyface'].src=options[selectedIndex].value;"
                                 >
-                                  <option value="/public/home/dev/images/p1.png"
-                                    >头像1</option
-                                  >
-                                  <option value="/public/home/dev/images/p2.png"
-                                    >头像2</option
-                                  >
-                                  <option value="/public/home/dev/images/p3.png"
-                                    >头像3</option
-                                  >
-                                  <option value="/public/home/dev/images/p4.png"
-                                    >头像4</option
-                                  >
-                                  <option value="/public/home/dev/images/p5.png"
-                                    >头像5</option
-                                  >
-                                  <option value="/public/home/dev/images/p6.png"
-                                    >头像6</option
-                                  >
-                                  <option value="/public/home/dev/images/p7.png"
-                                    >头像7</option
-                                  >
-                                  <option value="/public/home/dev/images/p8.png"
-                                    >头像8</option
-                                  >
+                                <option value="/public/home/images/p1.png">头像1</option>
+                                <option value="/public/home/images/p2.png">头像2</option>
+                                <option value="/public/home/images/p3.png">头像3</option>
+                                <option value="/public/home/images/p4.png">头像4</option>
+                                <option value="/public/home/images/p5.png">头像5</option>
+                                <option value="/public/home/images/p6.png">头像6</option>
+                                <option value="/public/home/images/p7.png">头像7</option>
+                                <option value="/public/home/images/p8.png">头像8</option>
                                 </select>
                               </label>
                               <span
                                 ><img
-                                  src="/public/home/dev/images/p1.png"
+                                  src="/public/home/images/p1.png"
                                   class="face"
                                   id="<%= reply.id %>replyface"
                                   alt="face"
