--- a/app/view/home/public/footer.html
+++ b/app/view/home/public/footer.html
@@ -18,7 +18,7 @@
   <small>Powered By Egg.js</small>
   <br />
   <small>
-    <script type="text/javascript">
+    <script defer>
       var cnzz_protocol =
         "https:" == document.location.protocol ? "https://" : "http://";
       document.write(
