feat: #5000 redis缓存热门博客

--- a/app/public/home/css/index.css
+++ b/app/public/home/css/index.css
@@ -10271,3 +10271,15 @@ body {
   background: var(--cyan);
   color: #fff;
 }
+.active1:hover {
+  background: var(--cyan);
+}
+.active2:hover {
+  background: var(--bule);
+}
+.active3:hover {
+  background: var(--orange);
+}
+.active4:hover {
+  background: var(--purple);
+}
