--- a/app/view/home/public/header.html
+++ b/app/view/home/public/header.html
@@ -15,18 +15,18 @@
     <div id="navigation" class="collapse navbar-collapse flex-column">
       <div class="profile-section pt-3 pt-lg-0">
         <img
-          class="profile-image mb-3 mx-auto"
+          class="profile-image mb-2 mx-auto"
           src="<%= webConfig.logo %>"
           alt="小涛,帅哥,logo图"
         />
-        <div class="bio mb-3">
+        <div class="bio mb-2">
           Hi，欢迎访问我的博客，和我一起学习<strong>Web前端</strong>和<strong>TypeScript</strong>知识吧！<br /><a
             href="https://gitee.com/littlestoney/blog"
             target="_blank"
             >本博客源代码地址</a
           >，欢迎star
         </div>
-        <ul class="social-list list-inline py-3 mx-auto">
+        <ul class="social-list list-inline py-2 mx-auto">
           <li class="list-inline-item">
             <a
               href="tencent://message/?uin=1085813343&Site=QQ交谈&Menu=yes"
@@ -58,6 +58,11 @@
           <a class="nav-link" href="/"
             ><i class="iconfont icon-shouye"></i>&nbsp;博客首页
           </a>
+        </li>
+        <li class="nav-item">
+          <a href="/hot" class="nav-link"
+            ><i class="iconfont icon-remen1"></i>&nbsp;热门博客</a
+          >
         </li>
         <li class="nav-item">
           <a href="/list" class="nav-link"
