--- a/app/view/home/article.html
+++ b/app/view/home/article.html
@@ -26,11 +26,11 @@
             borderColor: color,
           });
           $(".list-inline-item a").css("color", color);
-          $(".more-link").css("color", "#6C51A4");
+          $(".more-link").css("color", "#6c51a4");
         }
       }
     </script>
-    <link rel="stylesheet" href="/public/home/css/index-824a61fed6.min.css" />
+    <link rel="stylesheet" href="/public/home/css/index-fac6475525.min.css" />
     <link rel="shortcut icon" href="/public/home/images/favicon.ico" />
     <link
       rel="stylesheet"
