fix: @1300 图片懒加载适配低版本浏览器（取消该功能）

--- a/app/view/admin/login.html
+++ b/app/view/admin/login.html
@@ -55,7 +55,7 @@
                 </div>
             </div>
         </div>
-        <script src="https://cdn.bootcss.com/jquery/1.12.4/jquery.min.js"></script>
+        <script src="/public/home/js/jquery.js"></script>
         <script src="/public/login/js/agree.js"></script>
 </body>
 
