--- a/app/view/home/list.html
+++ b/app/view/home/list.html
@@ -33,7 +33,7 @@
             <div class="media">
               <img
                 src="https://via.placeholder.com/110x110.png?text=shixtao.cn"
-                class="mr-3 img-fluid post-thumb d-none d-md-flex"
+                class="img-list mr-3 img-fluid post-thumb d-none d-md-flex"
                 data-src="<%= data.img %>"
               />
               <div class="media-body">
