--- a/app/view/home/public/header.html
+++ b/app/view/home/public/header.html
@@ -20,11 +20,10 @@
           alt="小涛,帅哥,logo图"
         />
         <div class="bio mb-2">
-          Hi，欢迎访问我的博客，和我一起学习<strong>Web前端</strong>和<strong>TypeScript</strong>知识吧！<br /><a
-            href="https://gitee.com/littlestoney/blog"
-            target="_blank"
-            >本博客源代码地址</a
-          >，欢迎star
+          Hi，欢迎访问我的博客，和我一起学习<strong>Web前端</strong>和<strong>TypeScript</strong>知识吧！<br />
+          <a href='https://gitee.com/littlestoney/blog/stargazers'>
+            <img src='https://gitee.com/littlestoney/blog/badge/star.svg?theme=dark' alt='star' />
+          </a> 
         </div>
         <ul class="social-list list-inline py-2 mx-auto">
           <li class="list-inline-item">
