--- a/app/view/home/public/header.html
+++ b/app/view/home/public/header.html
@@ -21,7 +21,7 @@
         />
         <div class="bio mb-2">
           Hi，欢迎访问我的博客，和我一起学习<strong>Web前端</strong>和<strong>TypeScript</strong>知识吧！<br />
-          <img src="https://gitee.com/littlestoney/blog/badge/star.svg?theme=dark" alt="star" />
+          <a href='https://gitee.com/littlestoney/blog/stargazers'><img src='https://gitee.com/littlestoney/blog/badge/star.svg?theme=dark' alt='star'></img></a>
         </div>
         <ul class="social-list list-inline py-2 mx-auto">
           <li class="list-inline-item">
