--- a/app/view/home/index.html
+++ b/app/view/home/index.html
@@ -4,7 +4,7 @@
     <%- include('./public/head.html') %>
   </head>
 
-  <body onload="colorSet()">
+  <body>
     <%- include('./public/header.html') %>
     <div class="main-wrapper">
       <section class="cta-section theme-bg-light py-5">
