--- a/app/view/home/index.html
+++ b/app/view/home/index.html
@@ -49,9 +49,11 @@
                   <i class="iconfont icon-bokeyuan"></i>
                   <span title="博客类型"
                     ><%= data.type %>&nbsp;
-                    <span class="text-info">
-                      <% for(let list of lists){ %> <% if(data.cid === list.id){
-                      %> <%= list.name %> <% } %> <% } %>
+                    <span>
+                      <a class="text-info" href="/list?cid=<%= data.cid %>" title="博客类型">
+                        <% for(let list of lists){ %> <% if(data.cid === list.id){
+                        %> <%= list.name %> <% } %> <% } %>
+                      </a>
                     </span>
                   </span>
                   <i class="iconfont icon-shizhong"></i>
