--- a/app/view/admin/index.html
+++ b/app/view/admin/index.html
@@ -32,31 +32,31 @@
       </div>
       <div class="head-l">
         <a class="button button-little bg-green" href="" target="_blank"
-          ><span class="icon-home"></span> 前台首页</a
+          ><span></span> 前台首页</a
         >&nbsp;&nbsp;<a class="button button-little bg-red" href="/admin/logout"
-          ><span class="icon-power-off"></span> 退出登录</a
+          ><span></span> 退出登录</a
         >
       </div>
     </div>
     <div class="leftnav">
       <div class="leftnav-title">
-        <strong><span class="icon-list"></span>菜单列表</strong>
+        <strong><span></span>菜单列表</strong>
       </div>
       <h2><i></i>博客管理</h2>
       <ul>
         <li>
           <a href="/admin/blogstype" target="right"
-            ><span class="icon-caret-right"></span>博客分类管理</a
+            ><span></span>博客分类管理</a
           >
         </li>
         <li>
           <a href="/admin/blogs" target="right"
-            ><span class="icon-caret-right"></span>博客管理</a
+            ><span></span>博客管理</a
           >
         </li>
         <li>
           <a href="/admin/comment" target="right"
-            ><span class="icon-caret-right"></span>评论管理</a
+            ><span></span>评论管理</a
           >
         </li>
       </ul>
@@ -64,7 +64,7 @@
       <ul>
         <li>
           <a href="/admin/admin" target="right"
-            ><span class="icon-caret-right"></span>管理员管理</a
+            ><span></span>管理员管理</a
           >
         </li>
       </ul>
@@ -72,7 +72,7 @@
       <ul>
         <li>
           <a href="/admin/system" target="right"
-            ><span class="icon-caret-right"></span>系统管理</a
+            ><span></span>系统管理</a
           >
         </li>
       </ul>
