--- a/app/view/admin/index.html
+++ b/app/view/admin/index.html
@@ -91,7 +91,7 @@
       });
     </script>
     <ul class="bread">
-      <li><a href="/" target="_blank" class="icon-home">博客首页</a></li>
+      <li><a href="/" target="_blank">博客首页</a></li>
     </ul>
     <div class="admin">
       <iframe
