'添加个人简历，求职工作，加油'

--- a/app/view/home/public/header.html
+++ b/app/view/home/public/header.html
@@ -1,3 +1,4 @@
+<script src="../../../../config/config.prod.js"></script>
 <header class="header text-center">
   <h1 class="blog-name pt-lg-4 mb-0"><%= webConfig.title %></h1>
   <nav class="navbar navbar-expand-lg navbar-dark">
@@ -72,8 +73,8 @@
           >
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="javascript:alert('谢谢你的关注~')"
-            ><i class="iconfont icon-guanyu"></i>&nbsp;关于作者</a
+          <a class="nav-link" href="/home/Web前端开发_石涛.pdf" target="_blank"
+            ><i class="iconfont icon-guanyu"></i>&nbsp;求职工作</a
           >
         </li>
       </ul>
