--- a/app/view/home/public/header.html
+++ b/app/view/home/public/header.html
@@ -1,3 +1,4 @@
+<script src="../../../../config/config.prod.js"></script>
 <header class="header text-center">
   <h1 class="blog-name pt-lg-4 mb-0"><%= webConfig.title %></h1>
   <nav class="navbar navbar-expand-lg navbar-dark">
