'prod分支版本回退'

--- a/app/view/home/public/header.html
+++ b/app/view/home/public/header.html
@@ -73,8 +73,8 @@
           >
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/home/Web前端开发_石涛.pdf" target="_blank"
-            ><i class="iconfont icon-guanyu"></i>&nbsp;求职工作</a
+          <a class="nav-link" href="javascript:alert('谢谢你的关注~')"
+            ><i class="iconfont icon-guanyu"></i>&nbsp;关于作者</a
           >
         </li>
       </ul>
