--- a/app/view/home/list.html
+++ b/app/view/home/list.html
@@ -15,9 +15,9 @@
               <div class="col-auto my-1">
                 <label class="mr-sm-2 sr-only" for="inlineFormCustomSelect">Preference</label>
                 <select class="custom-select mr-sm-2" id="inlineFormCustomSelect">
-                  <option selected>选择分类</option>
+                  <option>选择分类</option>
                   <% lists.forEach(list => { %>
-                  <option value="<%= list.id %>"><%= list.name %></option>
+                    <option <%= cid == list.id ? 'selected' : '' %> value="<%= list.id %>"><%= list.name %></option>
                   <% }) %>
                 </select>
               </div>
