--- a/app/view/home/index.html
+++ b/app/view/home/index.html
@@ -10,7 +10,7 @@
       <section class="cta-section theme-bg-light py-5">
         <div class="container text-center">
           <h2 class="heading">
-            <span class="logo">shixtao.cn</span> ——— 一个前端爱好者的博客
+            <span class="logo">shixtao.cn</span> ——— 一个前端爱好者的博客，测试
           </h2>
           <div class="intro">欢迎您的访问！期待您留下宝贵的意见</div>
           <form class="signup-form form-inline justify-content-center pt-3">
